syntax = "proto3";
package movie;

import "google/api/annotations.proto";

option go_package = "delivery/grpc";

message Search {
    string title = 1;
    string year = 2;
    string imdb_id = 3;
    string type = 4;
    string poster = 5;    
}

message Rating {
    string source = 1;
    string value = 2;
}

message SearchMovieRequest {
    string searchword = 1;
    int32 pagination = 2;
}

message SearchMovieResponse {
    repeated Search results = 1;
    string total = 2;
}

message GetMovieDetailRequest {
    string id = 1;
}

message GetMovieDetailResponse {
    string title = 1;
    string year = 2;
    string rated = 3;
    string released = 4;
    string runtime = 5;
    string genre = 6;
    string director = 7;
    string writer = 8;
    string actors = 9;
    string plot = 10;
    string language = 11;
    string country = 12;
    string awards = 13;
    string poster = 14;
    repeated Rating ratings = 15;
    string metascore = 16;
    string imdb_rating = 17;
    string imdb_votes = 18;
    string imdb_id = 19;
    string type = 20;
    string dvd = 21;
    string box_office = 22;
    string production = 23;
    string website = 24;
}

service SearchMovie {
    rpc SearchMovie(SearchMovieRequest) returns (SearchMovieResponse) {
        option (google.api.http) = {
            get: "/v1/movies"
        };
    };

    rpc GetMovieDetail(GetMovieDetailRequest) returns (GetMovieDetailResponse) {
        option (google.api.http) = {
            get: "/v1/movies/{id}"
        };
    };
}